[package]
name = "raca"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2018"

[dependencies]
# parse cargo clippy output
serde_json = "1.0"

# gen Version struct for cargo-download
semver = "0.9"

# download stuff
reqwest = "0.9"

# extraction of .crates
flate2 = "1.0"
tar = "0.4" 

#get home dir
dirs = "1.0.5"

#git operations
git2 = "0.8"

# walkdir
walkdir = "2.2"

# make absolute paths relative
pathdiff = "0.1"